--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Фронтенд разработчик. React.js. Нарожнов Р.В." />
     <title>MySite</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
